--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,103 @@ output:
     keep_md: true
 ---
 
+## A. Loading and preprocessing the data
+```{r load, echo=TRUE}
+if(!file.exists("./C5_data/Activity_monitoring_data.zip")){
+  dir.create("./C5_data")
+  fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+  download.file(fileUrl, destfile="./C5_data/Activity_monitoring_data.zip")
+  unzip("./C5_data/Activity_monitoring_data.zip", exdir="./C5_data")
+}
 
-## Loading and preprocessing the data
+# Check extracted content in zip file
+list.files("./C5_data", recursive=TRUE)
+
+# Load data
+activitydata <- read.csv("./C5_data/activity.csv")
+
+# Explore data
+str(activitydata)
+head(activitydata)
+```
 
 
+## B. What is mean total number of steps taken per day?
+1. Calculate the total number of steps taken per day. 
+```{r stepsum, echo=TRUE}
+totalstep <- with(activitydata, aggregate(steps~date, FUN=sum, na.rm=TRUE))
+head(totalstep)
+```
 
-## What is mean total number of steps taken per day?
+2. Make histogram of the total number of steps taken each day.
+```{r hist, echo=TRUE}
+hist(totalstep$steps, xlab="Number of Steps per day", main="", breaks=25)
+```
+
+3. Calculate mean and median of the total number of steps taken per day
+```{r meanmed, echo=TRUE}
+mean(totalstep$steps)
+median(totalstep$steps)
+```
 
 
+## C. What is the average daily activity pattern?
+1. Make a time series plot of the 5 minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r plot, echo=TRUE, warning=FALSE, message=FALSE}
+library(dplyr)
+average <- with(activitydata, aggregate(steps~interval, FUN=mean, na.rm=TRUE))
+with(average, plot(interval, steps, type="l", main="Average daily activity pattern"))
+```
 
-## What is the average daily activity pattern?
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r maxstep, echo=TRUE}
+maxstep <- average[which.max(average$steps),]
+maxstep$interval
+```
 
 
+## D. Imputing missing values
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r nasum, echo=TRUE}
+nasum <- sum(is.na(activitydata))
+nasum
+```
 
-## Imputing missing values
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+```{r meanstepperinterval, echo=TRUE}
+meanstepsperinterval <- mean(average$steps)
+```
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r newdataset, echo=TRUE}
+activitydata2 <- activitydata
+stepNA <- is.na(activitydata$steps)
+activitydata2[stepNA,1] <- meanstepsperinterval
+head(activitydata2)
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r hist2, echo=TRUE}
+totalstepperday <- with(activitydata2, aggregate(steps~date, FUN=sum))
+hist(totalstepperday$steps, xlab="Number of Steps per Day", ylab="Number of Days", main="Number of steps per day")
+
+mean(totalstepperday$steps)
+median(totalstepperday$steps)
+```
 
 
+## E. Are there differences in activity patterns between weekdays and weekends? 
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+```{r day, echo=TRUE}
+library(dplyr)
+activitydata2$date <- as.Date(activitydata2$date, format="%Y-%m-%d")
+activitydata2 <- mutate(activitydata2, day=ifelse(weekdays(activitydata2$date)=="Saturday"| weekdays(activitydata2$date)=="Sunday", "Weekend", "Weekday"))
+head(activitydata2)
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
+2. Make a panel plot containing a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+```{r xyplot, echo=TRUE}
+library(lattice)
+xyplot(steps~interval|day, activitydata2, type="l", ylab="Number of Steps")
+```
+
